--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/avatar.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Portfolio de Yannick Biot – Développeur Web Full Stack</title>
+    <meta name="description" content="Découvrez mes projets en React, Node.js et MongoDB. Développeur web full stack spécialisé dans la création d’applications modernes.">
   </head>
   <body>
     <div id="root"></div>
