integration d'une image pour le hero de meilleur qualité pour > mobile

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/avatarmin.webp" />
     <link rel="preload" as="image" href="/avatar.webp" type="image/webp">
+    <link rel="preload" as="image" href="/avatarDesktop.webp" type="image/webp">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio de Yannick Biot – Développeur Web Full Stack</title>
     <meta name="description" content="Découvrez mes projets en React, Node.js et MongoDB. Développeur web full stack spécialisé dans la création d’applications modernes.">
