--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/avatarmin.webp" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Pour les performances -->
     <link rel="preload" as="image" href="/avatar.webp" type="image/webp">
     <link rel="preload" as="image" href="/avatarDesktop.webp" type="image/webp">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Pour le seo -->
     <title>Portfolio de Yannick Biot – Développeur Web Full Stack</title>
     <meta name="description" content="Découvrez mes projets en React, Node.js et MongoDB. Développeur web full stack spécialisé dans la création d’applications modernes.">
   </head>
   <body>
+    <!-- Pour la performance, preload des imaged qui impacte le LCP -->
     <img src="/avatar.webp" alt="Mon avatar" style="display:none" fetchpriority="high">
+    <img src="/avatarDesktop.webp" alt="Mon avatar" style="display:none" fetchpriority="high">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
